# DIMA_Control_Project

./: README.md  commands.txt
DIMA_UI/src/: DIMA_GUI.py  (+2 more)
Jetson_Control/: CMakeLists.txt  results.txt
Jetson_Control/data/logs/: 2022-10-10_07-23-39.csv  2022-10-10_08-25-27.csv  2022-10-13_08-28-39.csv  2022-10-20_15-15-47.csv  2022-10-20_15-22-43.csv  2022-10-31_17-01-31.csv  2022-11-01_14-51-40.csv  2022-11-01_14-52-27.csv  2022-11-01_14-53-04.csv  2022-11-01_14-54-12.csv  2022-11-01_14-57-06.csv  2022-11-01_14-57-39.csv  2022-11-01_14-58-13.csv  2022-11-01_15-00-21.csv  2022-11-01_15-02-04.csv  2022-11-01_15-04-09.csv  2022-11-01_15-05-37.csv  2022-11-01_15-06-33.csv  2022-11-01_15-07-43.csv  2022-11-01_15-09-27.csv  2022-11-01_15-10-45.csv  2022-11-01_15-12-05.csv
Jetson_Control/python_control/: jetson_control.py  maestro_uart.py
Jetson_Control/src/: DictionaryLike.cpp  JetsonGPIOConfig.h  command_packet.h  jetson.cpp  jetson.h
Jetson_Control/src/private/: PinDefinition.h  gpio_event.h  gpio_pin_data.h
can_tests/: can.py  device_names.txt
computer_vision/: face_recog.py  install_opencv.sh  wf.conf
gps_tests/: gps_test.py  uart.py
libusb_build/: CMakeCache.txt  Makefile  cmake_install.cmake  install_manifest.txt
sensor_tests/: bno055_test.py  out.txt  output.out
servo_tests/: servo_test.py  servo_test2.py  temp.py
spi_tests/: spi.py
tail_motors/: StringSplitter.h  tail_motors.ino  teensy.py
teensy_tests/: tail_motors.ino  teensy.py
xbee_tests/: device_names.txt  serial_comms  serial_comms.cpp  uart_example.py  xbee_comms.py  xbee_receive.py
(+13 files in other folders)
